--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewData["Title"] | HuertoDelValle</title>
     <link rel="shortcut icon" href="~/img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/footer.css" />
     <link rel="stylesheet" href="~/css/header.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,16 +22,8 @@
             </div>
 
             <ul class="nav__link nav__link--menu">
-                <li class="nav__items">
-                    <a  asp-controller="Catalogo" asp-action="Catalogo" class="nav__links">Catálogo</a>
-                </li>
-                <li class="nav__items">
-                    <a  asp-area="" asp-controller="Home" asp-action="Nosotros" class="nav__links">Nosotros</a>
-                </li>
-                <li class="nav__items">
-                    <a asp-area="" asp-controller="Proforma" asp-action="Proforma" class="nav__links">Carrito</a>
-                </li>
-                    <partial name="_LoginPartial" />
+                <partial name="_MenuPartial"/>
+                <partial name="_LoginPartial"/>
                 <img src="~/img/close.svg" class="nav__close" alt="" >
             </ul>
 
