--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -64,7 +64,7 @@
                     </div>
                     <form asp-action="" method="POST">
                         <input type="hidden" name="id" value="@producto.Id">
-                        <button asp-action ="Add" class="btn__cart">Añadir</button> <!--<i class="product__icon fas fa-cart-plus"></i>-->
+                        <button asp-action ="Agregar" class="btn__cart">Añadir</button> <!--<i class="product__icon fas fa-cart-plus"></i>-->
                     </form>
                 </div>
             }
